--- a/google/cloud/translate/v3beta1/samples/translate_detect_language_beta.yaml
+++ b/google/cloud/translate/v3beta1/samples/translate_detect_language_beta.yaml
@@ -32,7 +32,7 @@ samples:
     value: "[Google Cloud Project ID]"
     input_parameter: project
   - field: parent%location
-    value: us-central1
+    value: global
   response:
   - comment:
     - |
