--- a/google/cloud/translate/v3beta1/samples/translate_translate_text_beta.yaml
+++ b/google/cloud/translate/v3beta1/samples/translate_translate_text_beta.yaml
@@ -40,7 +40,7 @@ samples:
     value: "[Google Cloud Project ID]"
     input_parameter: project
   - field: parent%location
-    value: us-central1
+    value: global
   response:
   - comment:
     - Display the translation for each input text provided to %s
