--- a/google/cloud/translate/v3beta1/samples/translate_list_codes_beta.yaml
+++ b/google/cloud/translate/v3beta1/samples/translate_list_codes_beta.yaml
@@ -28,7 +28,7 @@ samples:
     value: "[Google Cloud Project ID]"
     input_parameter: project
   - field: parent%location
-    value: us-central1
+    value: global
   response:
   - comment:
     - List language codes of supported languages
