--- a/google/cloud/automl/v1beta1/samples/.samples.yaml
+++ b/google/cloud/automl/v1beta1/samples/.samples.yaml
@@ -11,10 +11,14 @@
 # Sample Source Definitions
 sample_compositions:
 
+# TODO(beccasaurus) Fix so we can simply do _templates/ without specifying files.
+
 # Save samples in automl_gapic.yaml in legacy v1.1 format
 - output: ../automl_gapic.yaml
+  region_tags: /video.*object_detection/i
   paths:
   - _templates/_common.yaml
+
   - _templates/managing_datasets/_samples.yaml
   - _templates/managing_datasets/_tests.yaml
   - _templates/managing_datasets/natural_language.yaml
@@ -23,10 +27,15 @@ sample_compositions:
   - _templates/managing_datasets/translation.yaml
   - _templates/managing_datasets/vision.yaml
 
+  - _templates/managing_models/_samples.yaml
+  - _templates/managing_models/vision.yaml
+
 # Output individual sample files in v1.2 format in samples/ dir for generator
 - output: .
+  region_tags: /video.*object_detection/i
   paths:
   - _templates/_common.yaml
+
   - _templates/managing_datasets/_samples.yaml
   - _templates/managing_datasets/_tests.yaml
   - _templates/managing_datasets/natural_language.yaml
@@ -34,3 +43,6 @@ sample_compositions:
   - _templates/managing_datasets/natural_language_sentiment.yaml
   - _templates/managing_datasets/translation.yaml
   - _templates/managing_datasets/vision.yaml
+
+  - _templates/managing_models/_samples.yaml
+  - _templates/managing_models/vision.yaml
