--- a/google/cloud/automl/v1beta1/samples/_templates/managing_datasets/_samples.yaml
+++ b/google/cloud/automl/v1beta1/samples/_templates/managing_datasets/_samples.yaml
@@ -62,6 +62,11 @@ templates:
   rpc: ListDatasets
   mixins:
   - Project and Location (in parent path)
+  # TODO
+  # request:
+  # - field: filter
+  #   value: "*"
+  #   comment: An expression for filtering the results of the request.
   response:
   - define: dataset = $resp
   - include: Print Dataset Information
