--- a/google/cloud/automl/v1beta1/samples/automl_natural_language_entity_list_datasets.yaml
+++ b/google/cloud/automl/v1beta1/samples/automl_natural_language_entity_list_datasets.yaml
@@ -32,6 +32,7 @@ samples:
   - field: parent%project
     value: "[Google Cloud Project ID]"
     input_parameter: project
+    comment: Required. Your Google Cloud Project ID.
   - field: parent%location
     value: us-central1
   response:
